2010-08-17  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * docs/manual.rst, docs/manual.html:
    Add license information in the manual.


2010-06-14  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd-plugin.h:
    Post-release version bump.
  * src/ggd.c:
    Update a string.
  * src/ggd-tag-utils.c:
    Use Geany's symbols_get_context_separator() and not a copied version since
    it is now exported to the plugin API since 185.
  * src/ggd-widget-doctype-selector.c:
    Add a popup menu.


2010-06-12  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd-tag-utils.c:
    Fix finding of tag's children. Pretty hackish fix but it now works even if
    there is two top-level tags sharing the same name.
  * NEWS:
    Update NEWS file.
  * src/ggd-plugin.c, src/ggd-plugin.h:
    Use non-Geany-Plugin version.


2010-06-04  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd.c:
    Fix crash when trying to generate documentation for a document with
    doc->tm_file == NULL, which is the case e.g. for None file type.
  * src/ggd-tag-utils.c:
    Fix finding the parent of a tag if this parent have the same name and
    scope than another tag in the document.


2010-06-03  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * src/ggd-plugin.c:
    Use new PLUGIN_SET_TRANSLATABLE_INFO() macro


2010-05-27  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * docs/Makefile.am, docs/help/Makefile.am -> docs/Makefile.am,
    docs/help/html4css1.css -> docs/html4css1.css,
    docs/help/manual.css -> docs/manual.css,
    docs/help/manual.html -> docs/manual.html,
    docs/help/manual.rst -> docs/manual.rst, src/ggd-plugin.c:
    Move the manual sources from docs/help to docs since the sub-directory
    is useless and led to some confusion.
    Install the HTML version of the manual in DOCDIR/html rather than
    DOCDIR.


2010-05-26  Colomban Wendling  <ban(at)herbesfolles(dot)org>

  * data/filetypes/c.conf: